# finance-assistant-langgraph

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/rules/: code-style.md  testing.md
.github/workflows/: ci.yml  eval.yml
app/: Dockerfile  config.py  main.py  models.py
app/agents/: adaptive_router.py
app/agents/tools/: financial_data.py  vector_search.py  web_search.py
app/components/: retriever.py
app/core/: lifespan.py  rate_limiter.py
app/observability/: cost_tracker.py  feedback.py  tracer.py
app/prompts/: registry.py  templates.py
app/routers/: chat.py  feedback.py  health.py
app/security/: input_guard.py  output_filter.py  pii_store.py
app/services/: conversation.py  rag_pipeline.py  semantic_cache.py
data/: golden_dataset.json
frontend/: Dockerfile  Dockerfile.dev  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatWindow.tsx  FeedbackButtons.tsx  InputBar.tsx  MessageBubble.tsx  Sidebar.tsx  SourceCitations.tsx
frontend/src/hooks/: useChat.ts  useFeedback.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
scripts/: eval.py  seed.py
tests/: test_cache.py  test_financial_data.py  test_input_guard.py  test_pii_store.py  test_rate_limiter.py  test_retrieval.py  test_routing.py
